--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -6,11 +6,7 @@ body {
   position: relative;
   color: white;
   height: 100vh;
-  background: linear-gradient(
-    180deg,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
+  background: linear-gradient(180deg, #dd5789 51.77%, #7a2c9e 129.35%);
   font-family: sans-serif;
   overflow-y: hidden;
   display: flex;
