--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -77,3 +77,13 @@ a:hover {
   opacity: 0.8;
   border-radius: 8px;
 }
+
+/* .modal-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400;
+  border: 2px solid #000;
+  box-shadow: 24;
+} */
