--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -78,12 +78,6 @@ a:hover {
   border-radius: 8px;
 }
 
-/* .modal-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 400;
-  border: 2px solid #000;
-  box-shadow: 24;
-} */
+.timepicker {
+  width: 78vw;
+}
