Show default thumbnail

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -81,3 +81,9 @@ a:hover {
 .timepicker {
   width: 78vw;
 }
+
+.centered-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
